Make linter happier

--- a/res/css/structures/_SpacePanel.pcss
+++ b/res/css/structures/_SpacePanel.pcss
@@ -237,7 +237,8 @@ $activeBorderColor: $primary-content;
             transform: rotate(45deg);
         }
 
-        .mx_BaseAvatar_image, .mx_BaseAvatar_initial {
+        .mx_BaseAvatar_image,
+        .mx_BaseAvatar_initial {
             border-radius: 8px;
             width: $topLevelHeight !important;
             height: $topLevelHeight !important;
@@ -293,7 +294,8 @@ $activeBorderColor: $primary-content;
         .mx_SpaceTreeLevel {
             // SC: doubled .mx_SpaceTreeLevel: Size down only space avatars of second hierarchy and down
             .mx_SpaceButton {
-                .mx_BaseAvatar_image, .mx_BaseAvatar_initial {
+                .mx_BaseAvatar_image,
+                .mx_BaseAvatar_initial {
                     border-radius: 8px;
                     width: $nestedHeight !important;
                     height: $nestedHeight !important;
