--- a/res/css/views/avatars/_DecoratedRoomAvatar.pcss
+++ b/res/css/views/avatars/_DecoratedRoomAvatar.pcss
@@ -80,9 +80,10 @@ limitations under the License.
     }
 }
 
-.mx_RoomList_Roomy .mx_DecoratedRoomAvatar, .mx_ExtraTile {
+.mx_RoomList_Roomy .mx_DecoratedRoomAvatar,
+.mx_ExtraTile {
     &.mx_DecoratedRoomAvatar_cutout .mx_BaseAvatar {
-        mask-image: url('$(res)/img/element-icons/roomlist/decorated-avatar-mask-big.svg');
+        mask-image: url("$(res)/img/element-icons/roomlist/decorated-avatar-mask-big.svg");
     }
 
     .mx_DecoratedRoomAvatar_icon {
