--- a/res/css/views/rooms/_NotificationBadge.pcss
+++ b/res/css/views/rooms/_NotificationBadge.pcss
@@ -33,7 +33,8 @@ limitations under the License.
         align-items: center;
         justify-content: center;
 
-        &.mx_NotificationBadge_highlighted, &.mx_NotificationBadge_highlighted.mx_NotificationBadge_dot {
+        &.mx_NotificationBadge_highlighted,
+        &.mx_NotificationBadge_highlighted.mx_NotificationBadge_dot {
             /* TODO: Use a more specific variable */
             background-color: $alert;
         }
