--- a/res/css/views/rooms/_RoomSublist.pcss
+++ b/res/css/views/rooms/_RoomSublist.pcss
@@ -138,18 +138,19 @@ limitations under the License.
             mask-image: url("$(res)/img/element-icons/roomlist/plus.svg");
         }
 
-        .mx_RoomSublist_auxGroupButton, .mx_RoomSublist_auxDmButton {
+        .mx_RoomSublist_auxGroupButton,
+        .mx_RoomSublist_auxDmButton {
             @extend .mx_RoomSublist_auxButton;
         }
 
         .mx_RoomSublist_auxGroupButton::before {
             // mask-image: url('$(res)/img/feather-customised/group-plus.svg');
-            mask-image: url('$(res)/img/element-icons/roomlist/hash-plus.svg');
+            mask-image: url("$(res)/img/element-icons/roomlist/hash-plus.svg");
         }
 
         .mx_RoomSublist_auxDmButton::before {
             // mask-image: url('$(res)/img/feather-customised/dm-plus.svg');
-            mask-image: url('$(res)/img/element-icons/roomlist/member-plus.svg');
+            mask-image: url("$(res)/img/element-icons/roomlist/member-plus.svg");
         }
 
         .mx_RoomSublist_menuButton::before {
