--- a/res/css/views/settings/tabs/_SettingsTab.pcss
+++ b/res/css/views/settings/tabs/_SettingsTab.pcss
@@ -108,7 +108,8 @@ limitations under the License.
         font-weight: $font-semi-bold;
     }
 
-    tr > th:first-child, tr > td:first-child {
+    tr > th:first-child,
+    tr > td:first-child {
         text-align: left;
     }
 
