--- a/res/themes/dark/css/_dark.pcss
+++ b/res/themes/dark/css/_dark.pcss
@@ -117,7 +117,7 @@ $dialog-close-external-color: $primary-content;
 /* ******************** */
 $roomlist-bg-color: rgba($system, 0.9);
 $roomsublist-skeleton-ui-bg: linear-gradient(180deg, #424242 0%, #42424200 100%);
-$roomtile-default-badge-bg-color: #8BC34A;
+$roomtile-default-badge-bg-color: #8bc34a;
 /* ******************** */
 
 /* Tabbed views */
@@ -155,7 +155,7 @@ $message-action-bar-hover-border-color: $header-panel-text-primary-color;
 /* Reaction row */
 /* ******************** */
 $reaction-row-button-hover-border-color: $header-panel-text-primary-color;
-$reaction-row-button-selected-bg-color: #33691E;
+$reaction-row-button-selected-bg-color: #33691e;
 /* ******************** */
 
 /* Voice messages */
@@ -168,7 +168,7 @@ $voice-record-icon-color: $quaternary-content;
 /* ******************** */
 $message-bubble-background-self: #303030;
 $message-bubble-background: #424242;
-$message-bubble-background-selected: #3F4931;
+$message-bubble-background-selected: #3f4931;
 
 /* ******************** */
 
@@ -196,7 +196,7 @@ $call-light-quaternary-content: #bdbdbd;
 
 /* Location sharing */
 /* ******************** */
-$location-live-color: #8BC34A;
+$location-live-color: #8bc34a;
 $location-live-secondary-color: #e0e0e0;
 /* ******************** */
 
