--- a/res/themes/light/css/_light.pcss
+++ b/res/themes/light/css/_light.pcss
@@ -38,8 +38,8 @@ $panel-hover: rgba($tertiary-content, 0.1);
 $panel-actions: rgba($tertiary-content, 0.2);
 $space-nav: rgba($tertiary-content, 0.15);
 
-$accent: #8BC34A;
-$alert: #E53935;
+$accent: #8bc34a;
+$alert: #e53935;
 $links: #0086e6;
 
 $username-variant1-color: #4189c9;
@@ -51,11 +51,11 @@ $username-variant6-color: #299ea0;
 $username-variant7-color: #5c57df;
 $username-variant8-color: #69a011;
 
-$username-pl100-color: #F44336;
-$username-pl95-color: #FF5722;
-$username-pl51-color: #03A9F4;
-$username-pl50-color: #2196F3;
-$username-pl1-color: #CDDC39;
+$username-pl100-color: #f44336;
+$username-pl95-color: #ff5722;
+$username-pl51-color: #03a9f4;
+$username-pl50-color: #2196f3;
+$username-pl1-color: #cddc39;
 $username-pl0-color: #8bc34a;
 
 $username-accent-color: $accent;
@@ -148,7 +148,7 @@ $roomheader-addroom-fg-color: #616161;
 /* Rich-text-editor */
 /* ******************** */
 $pill-bg-color: rgba(0, 0, 0, 0.13);
-$pill-hover-bg-color: rgba(0, 0, 0, 0.10);
+$pill-hover-bg-color: rgba(0, 0, 0, 0.1);
 $rte-bg-color: #e0e0e0;
 $rte-code-bg-color: rgba(0, 0, 0, 0.04);
 /* ******************** */
@@ -190,15 +190,15 @@ $imagebody-giflabel-color: $background;
 /* ******************** */
 $roomlist-bg-color: rgba(245, 245, 245, 0.9);
 $roomsublist-skeleton-ui-bg: linear-gradient(180deg, $background 0%, #ffffff00 100%);
-$roomtile-default-badge-bg-color: #8BC34A;
+$roomtile-default-badge-bg-color: #8bc34a;
 /* ******************** */
 
 /* e2e */
 /* ******************** */
-$e2e-verified-color: #8BC34A;
-$e2e-unknown-color: #FFC107;
-$e2e-unverified-color: #FFC107;
-$e2e-warning-color: #E53935;
+$e2e-verified-color: #8bc34a;
+$e2e-unknown-color: #ffc107;
+$e2e-unverified-color: #ffc107;
+$e2e-warning-color: #e53935;
 $e2e-verified-color-light: rgba($e2e-verified-color, 0.06);
 $e2e-warning-color-light: rgba($e2e-warning-color, 0.06);
 /* ******************** */
@@ -245,24 +245,24 @@ $message-action-bar-hover-border-color: $focus-bg-color;
 /* Reaction row */
 /* ******************** */
 $reaction-row-button-hover-border-color: $focus-bg-color;
-$reaction-row-button-selected-bg-color: #DCEDC8;
+$reaction-row-button-selected-bg-color: #dcedc8;
 /* ******************** */
 
 /* Voice messages */
 /* ******************** */
 /* These two don't change between themes. They are the $alert, but we don't want */
 /* custom themes to affect them by accident. */
-$voice-record-stop-symbol-color: #E53935;
-$voice-record-live-circle-color: #E53935;
+$voice-record-stop-symbol-color: #e53935;
+$voice-record-live-circle-color: #e53935;
 $voice-record-stop-border-color: $quinary-content;
 $voice-record-icon-color: $tertiary-content;
 /* ******************** */
 
 /* Message bubbles */
 /* ******************** */
-$message-bubble-background-self: #F1F8E9;
+$message-bubble-background-self: #f1f8e9;
 $message-bubble-background: #eeeeee;
-$message-bubble-background-selected: #DBEDC6;
+$message-bubble-background-selected: #dbedc6;
 
 /* ******************** */
 
@@ -335,7 +335,7 @@ $copy-button-url: "$(res)/img/element-icons/copy.svg";
 /* Location sharing */
 /* ******************** */
 $location-marker-color: #ffffff;
-$location-live-color: #8BC34A;
+$location-live-color: #8bc34a;
 $location-live-secondary-color: #e0e0e0;
 /* ******************** */
 
