--- a/res/css/structures/_UserMenu.pcss
+++ b/res/css/structures/_UserMenu.pcss
@@ -54,7 +54,8 @@ limitations under the License.
     }
 
     // SC: Scale avatar well with the font size
-    .mx_BaseAvatar_image, .mx_BaseAvatar_initial {
+    .mx_BaseAvatar_image,
+    .mx_BaseAvatar_initial {
         width: 3.2rem !important;
         height: 3.2rem !important;
         line-height: 3.2rem !important;
