--- a/res/css/views/context_menus/_RoomGeneralContextMenu.pcss
+++ b/res/css/views/context_menus/_RoomGeneralContextMenu.pcss
@@ -67,9 +67,9 @@
 }
 
 .mx_RoomGeneralContextMenu_markAsUnread::before {
-    mask-image: url('$(res)/img/element-icons/roomlist/mark-as-unread.svg');
+    mask-image: url("$(res)/img/element-icons/roomlist/mark-as-unread.svg");
 }
 
 .mx_RoomGeneralContextMenu_markAsRead::before {
-    mask-image: url('$(res)/img/element-icons/roomlist/mark-as-read.svg');
+    mask-image: url("$(res)/img/element-icons/roomlist/mark-as-read.svg");
 }
