--- a/res/css/views/elements/_Pill.pcss
+++ b/res/css/views/elements/_Pill.pcss
@@ -46,7 +46,7 @@ limitations under the License.
 
     &.mx_UserPill_me:hover {
         color: $accent-fg-color !important; /* To override .markdown-body */
-        background-color: #F44336 !important; /* To override .markdown-body | same on both themes */
+        background-color: #f44336 !important; /* To override .markdown-body | same on both themes */
     }
 
     /* We don't want to indicate clickability */
