--- a/res/css/views/elements/_StyledCheckbox.pcss
+++ b/res/css/views/elements/_StyledCheckbox.pcss
@@ -17,7 +17,7 @@ limitations under the License.
 .mx_Checkbox {
     $size: $font-16px;
     $border-size: $font-1-5px;
-    $border-radius: min($border-radius-4px, .6rem);
+    $border-radius: min($border-radius-4px, 0.6rem);
 
     display: flex;
     align-items: flex-start;
