--- a/res/css/views/rooms/_RoomHeader.pcss
+++ b/res/css/views/rooms/_RoomHeader.pcss
@@ -192,7 +192,8 @@ limitations under the License.
     // SC: downwards ...
     object-fit: cover;
 
-    .mx_BaseAvatar_image, .mx_BaseAvatar_initial {
+    .mx_BaseAvatar_image,
+    .mx_BaseAvatar_initial {
         width: 3rem !important;
         height: 3rem !important;
         line-height: 3rem !important;
