--- a/res/css/views/rooms/_RoomTile.pcss
+++ b/res/css/views/rooms/_RoomTile.pcss
@@ -16,8 +16,8 @@ limitations under the License.
 
 /* Note: the room tile expects to be in a flexbox column container */
 .mx_RoomTile {
-    margin-bottom: .4rem;
-    padding: .4rem;
+    margin-bottom: 0.4rem;
+    padding: 0.4rem;
     position: relative;
 
     /* The tile is also a flexbox row itself */
@@ -59,7 +59,7 @@ limitations under the License.
         min-width: 0;
         flex-basis: 0;
         flex-grow: 1;
-        margin-right: .8rem; /* spacing to buttons/badges */
+        margin-right: 0.8rem; /* spacing to buttons/badges */
 
         /* Create a new column layout flexbox for the title parts */
         display: flex;
@@ -103,7 +103,7 @@ limitations under the License.
     }
 
     .mx_RoomTile_notificationsButton {
-        right: .4rem;
+        right: 0.4rem;
     }
 
     .mx_RoomTile_badgeContainer {
@@ -116,13 +116,13 @@ limitations under the License.
         align-items: center;
 
         .mx_NotificationBadge {
-            margin-right: .2rem; /* centering */
+            margin-right: 0.2rem; /* centering */
         }
 
         .mx_NotificationBadge_dot {
             /* make the smaller dot occupy the same width for centering */
-            margin-left: .5rem;
-            margin-right: .7rem;
+            margin-left: 0.5rem;
+            margin-right: 0.7rem;
         }
     }
 
@@ -141,8 +141,8 @@ limitations under the License.
         border-radius: 500px;
 
         &::before {
-            top: .2rem;
-            left: .2rem;
+            top: 0.2rem;
+            left: 0.2rem;
             content: "";
             width: 1.6rem;
             height: 1.6rem;
@@ -194,7 +194,8 @@ limitations under the License.
 .mx_RoomList_Roomy .mx_RoomTile {
     height: 5.6rem;
 
-    .mx_DecoratedRoomAvatar, .mx_RoomTile_avatarContainer {
+    .mx_DecoratedRoomAvatar,
+    .mx_RoomTile_avatarContainer {
         .mx_BaseAvatar_initial {
             width: 4.8rem !important;
             line-height: 4.8rem !important;
@@ -218,11 +219,11 @@ limitations under the License.
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
-            margin-bottom: -.3rem; /* shift the preview down a bit more */
+            margin-bottom: -0.3rem; /* shift the preview down a bit more */
         }
 
         .mx_RoomTile_titleWithSubtitle {
-            margin-top: -.4rem; /* shift the name up a bit more */
+            margin-top: -0.4rem; /* shift the name up a bit more */
         }
     }
 }
@@ -230,7 +231,8 @@ limitations under the License.
 .mx_RoomList_Intermediate .mx_RoomTile {
     height: 4rem;
 
-    .mx_DecoratedRoomAvatar, .mx_RoomTile_avatarContainer {
+    .mx_DecoratedRoomAvatar,
+    .mx_RoomTile_avatarContainer {
         .mx_BaseAvatar_initial {
             width: 3.2rem !important;
             line-height: 3.2rem !important;
@@ -250,22 +252,23 @@ limitations under the License.
             font-size: 1.3rem;
             line-height: 1.8rem;
             max-height: 1.8rem;
-            margin-bottom: -.4rem; /* shift the preview down a bit more */
+            margin-bottom: -0.4rem; /* shift the preview down a bit more */
         }
 
         .mx_RoomTile_titleWithSubtitle {
-            margin-top: -.4rem; /* shift the name up a bit more */
+            margin-top: -0.4rem; /* shift the name up a bit more */
         }
     }
 }
 
 .mx_RoomList_Compact .mx_RoomTile {
     height: 2.6rem;
-    padding-top: .2rem;
-    padding-bottom: .2rem;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
 
-    .mx_DecoratedRoomAvatar, .mx_RoomTile_avatarContainer {
-        margin-right: .4rem;
+    .mx_DecoratedRoomAvatar,
+    .mx_RoomTile_avatarContainer {
+        margin-right: 0.4rem;
 
         .mx_BaseAvatar_initial {
             width: 2.2rem !important;
@@ -284,13 +287,13 @@ limitations under the License.
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        margin-right: .4rem; /* spacing to buttons/badges */
+        margin-right: 0.4rem; /* spacing to buttons/badges */
 
         .mx_RoomTile_title,
         .mx_RoomTile_subtitle {
             display: inline;
             text-overflow: unset;
-            margin: 0 .2rem;
+            margin: 0 0.2rem;
         }
 
         .mx_RoomTile_title {
