--- a/res/css/views/settings/_ThemeChoicePanel.pcss
+++ b/res/css/views/settings/_ThemeChoicePanel.pcss
@@ -113,7 +113,8 @@ limitations under the License.
 
 .mx_ThemeChoicePanel_userNameColorModeSection {
     .mx_SettingsTab_settingsTable {
-        tr > th:first-child, tr > td:first-child {
+        tr > th:first-child,
+        tr > td:first-child {
             padding-right: 16px;
         }
     }
