--- a/res/themes/legacy-light/css/_legacy-light.pcss
+++ b/res/themes/legacy-light/css/_legacy-light.pcss
@@ -124,7 +124,7 @@ $rte-code-bg-color: rgba(0, 0, 0, 0.04);
 $header-panel-text-primary-color: #757575;
 
 $pill-bg-color: rgba(0, 0, 0, 0.13);
-$pill-hover-bg-color: rgba(0, 0, 0, 0.10);
+$pill-hover-bg-color: rgba(0, 0, 0, 0.1);
 
 $topleftmenu-color: #212121;
 $roomheader-bg-color: $primary-bg-color;
@@ -138,16 +138,16 @@ $room-icon-unread-color: #757575;
 
 $theme-button-bg-color: #e0e0e0;
 
-$roomtile-default-badge-bg-color: #8BC34A;
+$roomtile-default-badge-bg-color: #8bc34a;
 $roomtile-selected-bg-color: #fff;
 
 $presence-away: #d9b072;
 $presence-offline: #bdbdbd;
-$presence-busy: #E53935;
+$presence-busy: #e53935;
 
 /* Legacy theme backports */
-$accent: #8BC34A;
-$alert: #E53935;
+$accent: #8bc34a;
+$alert: #e53935;
 $links: #0086e6;
 $primary-content: $primary-fg-color;
 $secondary-content: $secondary-fg-color;
@@ -199,11 +199,11 @@ $username-variant6-color: #299ea0;
 $username-variant7-color: #5c57df;
 $username-variant8-color: #69a011;
 
-$username-pl100-color: #F44336;
-$username-pl95-color: #FF5722;
-$username-pl51-color: #03A9F4;
-$username-pl50-color: #2196F3;
-$username-pl1-color: #CDDC39;
+$username-pl100-color: #f44336;
+$username-pl95-color: #ff5722;
+$username-pl51-color: #03a9f4;
+$username-pl50-color: #2196f3;
+$username-pl1-color: #cddc39;
 $username-pl0-color: #8bc34a;
 
 /* ******************** */
@@ -226,10 +226,10 @@ $event-timestamp-color: #aaaaaa;
 $copy-button-url: "$(res)/img/element-icons/copy.svg";
 
 /* e2e */
-$e2e-verified-color: #8BC34A;
-$e2e-unknown-color: #FFC107;
-$e2e-unverified-color: #FFC107;
-$e2e-warning-color: #E53935;
+$e2e-verified-color: #8bc34a;
+$e2e-unknown-color: #ffc107;
+$e2e-unverified-color: #ffc107;
+$e2e-warning-color: #e53935;
 $e2e-verified-color-light: rgba($e2e-verified-color, 0.06);
 $e2e-warning-color-light: rgba($e2e-warning-color, 0.06);
 
@@ -276,7 +276,7 @@ $message-action-bar-border-color: #e0e0e0;
 $message-action-bar-hover-border-color: $focus-bg-color;
 
 $reaction-row-button-hover-border-color: $focus-bg-color;
-$reaction-row-button-selected-bg-color: #DCEDC8;
+$reaction-row-button-selected-bg-color: #dcedc8;
 
 $kbd-border-color: $message-action-bar-border-color;
 
@@ -301,10 +301,9 @@ $inlinecode-border-color: #00000010;
 $inlinecode-background-color: #00000010;
 
 /* Bubble tiles */
-$message-bubble-background-self: #F1F8E9;
+$message-bubble-background-self: #f1f8e9;
 $message-bubble-background: #eeeeee;
-$message-bubble-background-selected: #DBEDC6;
-
+$message-bubble-background-selected: #dbedc6;
 
 /* pinned events indicator */
 $pinned-color: $tertiary-content;
@@ -314,7 +313,7 @@ $spacePanel-divider-color: $tertiary-content;
 /* Location sharing */
 /* ******************** */
 $location-marker-color: #ffffff;
-$location-live-color: #8BC34A;
+$location-live-color: #8bc34a;
 $location-live-secondary-color: #e0e0e0;
 /* ******************** */
 
