--- a/res/themes/light/css/_light.pcss
+++ b/res/themes/light/css/_light.pcss
@@ -148,7 +148,7 @@ $roomheader-addroom-fg-color: #616161;
 /* Rich-text-editor */
 /* ******************** */
 $pill-bg-color: rgba(0, 0, 0, 0.13);
-$pill-hover-bg-color: rgba(0, 0, 0, 0.10);
+$pill-hover-bg-color: rgba(0, 0, 0, 0.1);
 $rte-bg-color: #e0e0e0;
 $rte-code-bg-color: rgba(0, 0, 0, 0.04);
 /* ******************** */
@@ -190,15 +190,15 @@ $imagebody-giflabel-color: $background;
 /* ******************** */
 $roomlist-bg-color: rgba(245, 245, 245, 0.9);
 $roomsublist-skeleton-ui-bg: linear-gradient(180deg, $background 0%, #ffffff00 100%);
-$roomtile-default-badge-bg-color: #8BC34A;
+$roomtile-default-badge-bg-color: #8bc34a;
 /* ******************** */
 
 /* e2e */
 /* ******************** */
-$e2e-verified-color: #8BC34A;
-$e2e-unknown-color: #FFC107;
-$e2e-unverified-color: #FFC107;
-$e2e-warning-color: #E53935;
+$e2e-verified-color: #8bc34a;
+$e2e-unknown-color: #ffc107;
+$e2e-unverified-color: #ffc107;
+$e2e-warning-color: #e53935;
 $e2e-verified-color-light: rgba($e2e-verified-color, 0.06);
 $e2e-warning-color-light: rgba($e2e-warning-color, 0.06);
 /* ******************** */
@@ -245,7 +245,7 @@ $message-action-bar-hover-border-color: $focus-bg-color;
 /* Reaction row */
 /* ******************** */
 $reaction-row-button-hover-border-color: $focus-bg-color;
-$reaction-row-button-selected-bg-color: #DCEDC8;
+$reaction-row-button-selected-bg-color: #dcedc8;
 /* ******************** */
 
 /* Voice messages */
