Allow reactions to take more space

--- a/res/css/views/messages/_ReactionsRowButton.pcss
+++ b/res/css/views/messages/_ReactionsRowButton.pcss
@@ -14,6 +14,7 @@ Please see LICENSE files in the repository root for full details.
     background-color: $secondary-hairline-color;
     user-select: none;
     align-items: center;
+    max-width: calc(100% - 40px);;
 
     &:hover {
         border-color: $quinary-content;
@@ -29,7 +30,6 @@ Please see LICENSE files in the repository root for full details.
     }
 
     .mx_ReactionsRowButton_content {
-        max-width: 100px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
