Make add reaction button fit into line

--- a/res/css/views/messages/_ReactionsRowButton.pcss
+++ b/res/css/views/messages/_ReactionsRowButton.pcss
@@ -22,7 +22,7 @@ limitations under the License.
     border-radius: 500px;
     background-color: $header-panel-bg-color;
     user-select: none;
-    max-width: calc(100% - 40px);
+    max-width: calc(100% - 5rem);
 
     &:hover {
         border-color: $reaction-row-button-hover-border-color;
