Use css variable

--- a/res/css/views/settings/tabs/_SettingsTab.pcss
+++ b/res/css/views/settings/tabs/_SettingsTab.pcss
@@ -105,7 +105,7 @@ limitations under the License.
     }
 
     tr > th {
-        font-weight: $font-semi-bold;
+        font-weight: var(--font-semi-bold);
     }
 
     tr > th:first-child,
