Fix two line preview in room list post merge

--- a/res/css/views/rooms/_RoomTile.pcss
+++ b/res/css/views/rooms/_RoomTile.pcss
@@ -230,6 +230,12 @@ limitations under the License.
             margin-bottom: -0.3rem; /* shift the preview down a bit more */
         }
 
+        .mx_RoomTile_subtitle_text {
+            text-overflow: unset;
+            white-space: unset;
+            text-align: unset;
+        }
+
         .mx_RoomTile_titleWithSubtitle {
             margin-top: -0.4rem; /* shift the name up a bit more */
         }
