--- a/res/css/views/rooms/_RoomTile.pcss
+++ b/res/css/views/rooms/_RoomTile.pcss
@@ -228,6 +228,7 @@ limitations under the License.
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             margin-bottom: -0.3rem; /* shift the preview down a bit more */
+            overflow: hidden; /* get rid of tiny top of hidden next lines */
         }
 
         .mx_RoomTile_subtitle_text {
