--- a/res/css/views/rooms/_BubbleLayout.pcss
+++ b/res/css/views/rooms/_BubbleLayout.pcss
@@ -79,9 +79,8 @@ $left-gutter: 5.4rem;
 
             .mx_BaseAvatar_image,
             .mx_BaseAvatar_initial {
-                width: 3rem !important;
-                height: 3rem !important;
-                line-height: 3rem !important;
+                width: 30px !important;
+                height: 30px !important;
             }
         }
 
