Revert "Use rems for space panel icons"
This reverts commit 93870dffe2b1244f2d6f1df1f177e918e6b27735.

--- a/res/css/structures/_SpacePanel.pcss
+++ b/res/css/structures/_SpacePanel.pcss
@@ -18,9 +18,9 @@ limitations under the License.
     --activeBackground-color: $panel-actions;
     --activeBorder-color: $primary-content;
     --activeBorder-transparent-gap: 1px;
-    --gutterSize: 1.6rem;
-    --height-nested: 2.4rem;
-    --height-topLevel: 3.2rem;
+    --gutterSize: 16px;
+    --height-nested: 24px;
+    --height-topLevel: 32px;
 
     background-color: $spacePanel-bg-color;
     flex: 0 0 auto;
