--- a/res/css/views/rooms/_RoomHeader.pcss
+++ b/res/css/views/rooms/_RoomHeader.pcss
@@ -170,9 +170,9 @@ limitations under the License.
 
     .mx_BaseAvatar_image,
     .mx_BaseAvatar_initial {
-        width: 3rem !important;
-        height: 3rem !important;
-        line-height: 3rem !important;
+        width: 30px !important;
+        height: 30px !important;
+        line-height: 30px !important;
     }
 }
 
