--- a/res/css/views/rooms/_EventTile.pcss
+++ b/res/css/views/rooms/_EventTile.pcss
@@ -1451,8 +1451,8 @@ $left-gutter: 64px;
         .mx_EventTile_msgOption {
             .mx_ReadReceiptGroup {
                 /* This aligns the avatar with the last line of the */
-                /* message. We want to move it one line up - 2rem */
-                inset-block-start: -2rem;
+                /* message. We want to move it one line up - 20px */
+                inset-block-start: -20px;
             }
         }
 
