--- a/res/css/views/rooms/_MessageComposer.pcss
+++ b/res/css/views/rooms/_MessageComposer.pcss
@@ -76,15 +76,15 @@ limitations under the License.
             // SC: Scale avatar well with font size
             border: 1px solid transparent;
             border-radius: 100%;
-            width: 3rem !important;
-            height: 3rem !important;
+            width: 30px !important;
+            height: 30px !important;
         }
 
         .mx_BaseAvatar_initial {
             // SC: Scale avatar well with font size
-            width: 3rem !important;
-            height: 3rem !important;
-            line-height: 3rem !important;
+            width: 30px !important;
+            height: 30px !important;
+            line-height: 30px !important;
         }
     }
 }
@@ -103,8 +103,8 @@ limitations under the License.
     left: 20px;
     margin-right: 0; /* Counteract the E2EIcon class */
     margin-left: 3px; /* Counteract the E2EIcon class */
-    width: 1.2rem;
-    height: 1.2rem;
+    width: 12px;
+    height: 12px;
 }
 
 .mx_MessageComposer_noperm_error {
