--- a/res/css/views/rooms/_RoomHeader.pcss
+++ b/res/css/views/rooms/_RoomHeader.pcss
@@ -26,8 +26,8 @@ limitations under the License.
     background-color: $background;
 
     .mx_RoomHeader_icon {
-        height: 1.4rem;
-        width: 1.4rem;
+        height: 14px;
+        width: 14px;
 
         &.mx_RoomHeader_icon_video {
             height: 14px;
@@ -141,8 +141,8 @@ limitations under the License.
     flex: 1;
     color: $roomtopic-color;
     font: var(--cpd-font-body-sm-regular);
-    line-height: 1rem;
-    max-height: calc(1rem * $lines);
+    line-height: 10px;
+    max-height: calc(10px * $lines);
 
     margin-left: 3px;
     margin-right: 7px;
