--- a/res/css/structures/_UserMenu.pcss
+++ b/res/css/structures/_UserMenu.pcss
@@ -63,9 +63,9 @@ limitations under the License.
     // SC: Scale avatar well with the font size
     .mx_BaseAvatar_image,
     .mx_BaseAvatar_initial {
-        width: 3.2rem !important;
-        height: 3.2rem !important;
-        line-height: 3.2rem !important;
+        width: 32px !important;
+        height: 32px !important;
+        line-height: 32px !important;
     }
 
     .mx_UserMenu_dndBadge {
