--- a/res/css/views/rooms/_RoomHeader.pcss
+++ b/res/css/views/rooms/_RoomHeader.pcss
@@ -72,7 +72,7 @@ limitations under the License.
     flex: 0 1 auto;
     overflow: hidden;
     color: $primary-content;
-    font: var(--cpd-font-heading-sm-semibold);
+    font-size: $font-18px;
     font-weight: var(--cpd-font-weight-semibold);
     min-height: 24px;
     align-items: center;
@@ -141,8 +141,8 @@ limitations under the License.
     flex: 1;
     color: $roomtopic-color;
     font: var(--cpd-font-body-sm-regular);
-    line-height: 10px;
-    max-height: calc(10px * $lines);
+    line-height: var(--cpd-font-body-sm-regular);
+    max-height: calc(var(--cpd-font-body-sm-regular) * $lines);
 
     margin-left: 3px;
     margin-right: 7px;
