--- a/res/css/views/elements/_StyledCheckbox.pcss
+++ b/res/css/views/elements/_StyledCheckbox.pcss
@@ -16,7 +16,7 @@ limitations under the License.
 
 .mx_Checkbox {
     $size: $font-16px;
-    $border-radius: min($border-radius-4px, 0.5rem);
+    $border-radius: min($border-radius-4px, 4px);
 
     display: flex;
     align-items: flex-start;
