--- a/res/css/_sc/views/rooms/_IRClayout.pcss
+++ b/res/css/_sc/views/rooms/_IRClayout.pcss
@@ -14,6 +14,20 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
+/* This mixin defines border radius for corders */
+@define-mixin sc_borderRadius {
+    .mx_DisambiguatedProfile {
+        border-start-start-radius: var(--sc-border-radius-8px, 3px);
+        border-end-start-radius: var(--sc-border-radius-8px, 3px);
+
+        /* This removes top left and bottom left corders from mx_EventTile_line, if just mx_DisambiguatedProfile is hovered. This enables the highlight line straight without being dent by those corners. Please note that they do appear if just mx_EventTile_line is hovered. */
+        &:hover ~ .mx_EventTile_line {
+            border-start-start-radius: 0;
+            border-end-start-radius: 0;
+        }
+    }
+}
+
 @define-mixin sc_DisambiguatedProfile {
     .mx_DisambiguatedProfile {
         /* Align elements to the end side */
@@ -85,6 +99,7 @@ limitations under the License.
             }
 
             @mixin sc_DisambiguatedProfile;
+            @mixin sc_borderRadius;
             @mixin sc_ReplyTile;
         }
     }
