--- a/res/css/_sc/_customization.pcss
+++ b/res/css/_sc/_customization.pcss
@@ -15,5 +15,7 @@ limitations under the License.
 */
 
 /* TODO: replace @import with @mixin once multiple CSS files are created for customization in order to keep styling modular */
+/* Please mind where to import CSS files as it affects how styles cascade. */
+
 @import "./views/rooms/_EventTile.pcss";
 @import "./views/rooms/_IRClayout.pcss";
