--- a/res/css/_sc/_customization.pcss
+++ b/res/css/_sc/_customization.pcss
@@ -18,4 +18,4 @@ limitations under the License.
 /* Please mind where to import CSS files as it affects how styles cascade. */
 
 @import "./views/rooms/_EventTile.pcss";
-@import "./views/rooms/_IRClayout.pcss";
+@import "./views/rooms/_IRCLayout.pcss";
