--- a/res/css/_sc/views/rooms/_EventTile.pcss
+++ b/res/css/_sc/views/rooms/_EventTile.pcss
@@ -25,6 +25,9 @@ limitations under the License.
 }
 
 .mx_EventTile {
+    /* Fix */
     @mixin mx_ReplyTile;
+
+    /* Customization */
     @mixin sc_EventTile_content;
 }
