--- a/res/css/_components.pcss
+++ b/res/css/_components.pcss
@@ -382,3 +382,6 @@
 @import "./voice-broadcast/atoms/_VoiceBroadcastRecordingConnectionError.pcss";
 @import "./voice-broadcast/atoms/_VoiceBroadcastRoomSubtitle.pcss";
 @import "./voice-broadcast/molecules/_VoiceBroadcastBody.pcss";
+
+/* TODO: replace with a CSS file, on which custom CSS properties are collectively specified. */
+@import "./_sc/feature-improvement/structures/_AutoHideScrollbar.pcss";
